# ncpaprop-release

./: .gitignore  LICENSE  Makefile.in  README.md  aclocal.m4  changelog.txt  configure  configure.ac
docs/ncpaprop_run_manual_TeX/: NCPA_prop_manual.tex  acknowledgements.tex  cover_page.tex  legalize.tex  ncpaprop.bib  runtex.sh
docs/ncpaprop_run_manual_TeX/sections/: ePape.tex  installation.tex  introduction.tex  modbb.tex  modess.tex  running_code_in_general.tex  wmod.tex
lib/: README
m4/: acx_mpi.m4  ax_blas.m4  ax_ncpa_messages.m4
samples/: g2sprofile.sample  synthetic.atm
src/: unit_test_template.cpp
src/atmosphere/: Atmosphere1D.cpp  Atmosphere1D.h  Atmosphere2D.cpp  Atmosphere2D.h  Atmosphere3D.h  AtmosphericModel.cpp  AtmosphericModel.h  AtmosphericProperty1D.cpp  AtmosphericProperty1D.h  AtmosphericProperty3D.cpp  AtmosphericProperty3D.h  AttenuationModel.cpp  ISO9613_1AttenuationModel.cpp  Makefile.in  ProfileGridAtmosphere3D.cpp  ProfileGridAtmosphere3D.h  ProfileSeriesAtmosphere2D.cpp  ProfileSeriesAtmosphere2D.h  StratifiedAtmosphere2D.cpp  StratifiedAtmosphere2D.h  StratifiedAtmosphere3D.cpp  StratifiedAtmosphere3D.h  SutherlandBassAttenuationModel.cpp  ToyAtmosphere1D.cpp  ToyAtmosphere1D.h  Turbulence.cpp  Turbulence.h  file-format-description.txt  ncpaprop_atmosphere.h  ncpaprop_atmosphere_interface.cpp  ncpaprop_atmosphere_interface.h  sources.make
src/atmosphere/include/: Atmosphere1D.h  Atmosphere2D.h  Atmosphere3D.h  AtmosphericModel.h  AtmosphericProperty1D.h  AtmosphericProperty3D.h  ISO9613_1AttenuationModel.h  LosslessAttenuationModel.h  ProfileGridAtmosphere3D.h  ProfileSeriesAtmosphere2D.h  StratifiedAtmosphere3D.h  SutherlandBassAttenuationModel.h
src/atmosphere/src/: Atmosphere1D.cpp  Atmosphere2D.cpp  Atmosphere3D.cpp  AtmosphericModel.cpp  AtmosphericProperty1D.cpp  AtmosphericProperty3D.cpp  ProfileGridAtmosphere3D.cpp  ProfileSeriesAtmosphere2D.cpp  StratifiedAtmosphere2D.cpp  StratifiedAtmosphere3D.cpp  ToyAtmosphere1D.cpp  Turbulence.cpp
src/atmosphere/test/: Makefile.in  test_AtmosphericModel.cpp
src/attenuation/: AttenuationModel.cpp  AttenuationModel.h  AttenuationModelFactory.h  ISO9613_1AttenuationModel.cpp  ISO9613_1AttenuationModel.h  LosslessAttenuationModel.cpp  LosslessAttenuationModel.h  Makefile.in  NCPAAttenuation.h  SutherlandBassAttenuationModel.cpp  SutherlandBassAttenuationModel.h  attenuation.cpp  attenuation.h  sources.make
src/attenuation/include/: AttenuationModel.h  ISO9613_1AttenuationModel.h  LosslessAttenuationModel.h  MoleFractionCalculator.h  NCPAAttenuation.h  SutherlandBassAttenuationModel.h  TabularAttenuationModel.h
src/attenuation/src/: AttenuationModel.cpp  AttenuationModelFactory.cpp  ISO9613_1AttenuationModel.cpp  LosslessAttenuationModel.cpp  MoleFractionCalculator.cpp  SutherlandBassAttenuationModel.cpp  TabularAttenuationModel.cpp
src/common/: AtmosphericTransferFunctionSolver.h  LANLInterpolation.cpp  LANLInterpolation.h  Makefile.in  binaryreader.cpp  geographic.cpp  geographic.h  messaging.cpp  messaging.h  ncpaprop_common.h  parameterset.cpp  parameterset.h  smartpointer.h  sources.make  units.cpp  units.h  util.cpp  util.h
src/common/include/: NCPACommon.h  binaryreader.h  matrix.h  messaging.h  ncpa_fft.h  ncpaprop_common.h  parameterset.h  unit_tester.h  util.h
src/common/src/: messaging.cpp  ncpa_fft.cpp  parameterset.cpp  util.cpp
src/common/test/: Makefile.in  test_util.cpp
src/epade_pe/: Makefile.in  epade_pe_main.cpp  epade_pe_parameters.cpp  epade_pe_parameters.h  sources.make
src/gfpe/: Makefile.in  gfpe_main.cpp  gfpe_parameters.cpp  gfpe_parameters.h  sources.make
src/interpolation/: Makefile.in  sources.make
src/interpolation/include/: GSLInterpolator1D.h  GSLPeriodicInterpolator1D.h  Interpolator1D.h  LANLInterpolation.h  LANLLinearInterpolator1D.h  LANLNaturalCubicSplineInterpolator1D.h  NCPAInterpolation.h  NCPALinearInterpolator1D.h  NCPANearestNeighborInterpolator1D.h
src/interpolation/src/: GSLInterpolator1D.cpp  GSLPeriodicInterpolator1D.cpp  Interpolator1D.cpp  LANLInterpolation.cpp  LANLLinearInterpolator1D.cpp  LANLNaturalCubicSplineInterpolator1D.cpp  NCPALinearInterpolator1D.cpp  NCPANearestNeighborInterpolator1D.cpp
src/interpolation/test/: Makefile.in  test_GSLInterpolator1D.cpp  test_GSLPeriodicInterpolator1D.cpp  test_Interpolator1D.cpp  test_LANLLinearInterpolator1D.cpp  test_LANLNaturalCubicSplineInterpolator1D.cpp  test_NCPALinearInterpolator1D.cpp  test_NCPANearestNeighborInterpolator1D.cpp
src/libbroadband/: BroadbandPropagator.cpp  BroadbandPropagator.h  Makefile.in  ModalBroadbandPropagator.cpp  ModalBroadbandPropagator.h  sources.make
src/libmodes/: ESSModeSolver.cpp  ESSModeSolver.h  EigenEngine.cpp  EigenEngine.h  Makefile.in  ModeSolver.cpp  ModeSolver.h  WModeSolver.cpp  WModeSolver.h  modes.h  sources.make
src/libpe/: EPadeSolver.constructor.cpp.getter  EPadeSolver.cpp  EPadeSolver.cpp.getter  EPadeSolver.h  EPadeSolver.h.getter  GFPESolver.cpp  GFPESolver.h  Makefile.in  sources.make
src/linalg/: DiagonalMatrix.h  Makefile.in  Matrix.h  Matrix.orig.h  SparseMatrix.h  TridiagonalMatrix.h
src/linearalgebra/: Makefile.in  sources.make
src/linearalgebra/include/: NCPABasicLUDecomposition.h  NCPABasicLinearAlgebraFactory.h  NCPABasicLinearSystemSolver.h  NCPABasicMatrix.h  NCPABasicVector.h  NCPALUDecomposition.h  NCPALinearAlgebra.h  NCPALinearAlgebraFactory.h  NCPALinearSystemSolver.h  NCPAMatrix.h  NCPASparseMatrix.h  NCPAVector.h
src/linearalgebra/test/: Makefile.in  test_NCPABasicLUDecomposition.cpp  (+6 more)
src/modbb/: Makefile.in  ModBB_main.cpp  modbb_parameters.cpp  modbb_parameters.h  sources.make
src/modess/: Makefile.in  Modess_main.cpp  modess_parameters.cpp  modess_parameters.h  sources.make
src/petsc/: Makefile.in  ncpaprop_petsc.cpp  ncpaprop_petsc.h  sources.make
src/units/: Makefile.in  NCPAUnits.h  ScalarWithUnits.h  VectorWithUnits.cpp  VectorWithUnits.h  sources.make  units.cpp  units.h
src/wmod/: Makefile.in  WMod_main.cpp  sources.make  wmod_parameters.cpp  wmod_parameters.h
(+47 files in other folders)
